wflow_publish(c("analysis/modified_code.Rmd", "analysis/ldsc_run.Rmd"))

--- a/analysis/ldsc_run.Rmd
+++ b/analysis/ldsc_run.Rmd
@@ -36,7 +36,7 @@ Result:
 - `h^2` for 18373 genes are estimated
 
 
-[Modified code]("doc/modified_code.html)
+[Modified code](modified_code.html)
 
 
 ---
