wflow_publish("analysis/ldsc_run.Rmd", force = T, update = T,     republish = T, delete_cache = T)

--- a/analysis/ldsc_run.Rmd
+++ b/analysis/ldsc_run.Rmd
@@ -110,6 +110,7 @@ g3 = ggplot(hsq, aes(h2.z, RVIS.z)) +
     geom_smooth(method = "lm")
 ```
 
+$h^2$ against normalized $EDS$, $pLI$, and $RVIS$
 
 ```{r, fig.height=8}
 gridExtra::grid.arrange(g1, g2, g3, nrow=2)
